Bug 894042 - Disallow Places from creating async statements after asyncClose(). r=Mano